compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-1/neg/2.2.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, real-literals -> paragraph 1 -> sentence 2
 * NUMBER: 2
 * DESCRIPTION: Not allowed binary real literals.
 */

val value = 0b100.1
val value = 0b100.0
val value = 0B0.0
val value = 0b00.0
val value = 0b00.000
val value = 0b001.000
val value = 0b11.1100111000
val value = 0B1111.00000000001

val value = 0b110000.011101011101
val value = 0B1100.110001
val value = 0b0110011100110001.0110011100110001

val value = 0.0B11
val value = 0.0b010100110001
val value = 1100111.0b11001110011
val value = 10000000000.0b010100110001
val value = 0.10b010100110001
val value = .0B110001
val value = .0b0110011100

val value = 0b0.0b0
val value = 0B11.0b11
val value = 0b000001.0b000001
val value = 0B110001.0b110001

val value = 0b011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001.01100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001
val value = 0B011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001.01100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001
val value = 1100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001.0B1100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110
val value = 1100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001110001100111000110011100011001.0b11000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011000101100111001100010110011100110001011001110011
